[package]
name = "rustisay"
version = "0.1.1"
edition = "2024"
description = "Convert images to colored ASCII art in the terminal, with GIF support"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Himanshu121865/rustisay"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = "0.24"
bdf-reader = "0.1"
colored = "2"
ctrlc = "3.4"
indicatif = "0.18"
